--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-dm-sans: var(--font-dm-sans);
+  --font-azeret-mono: var(--font-azeret-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,7 +27,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-dm-sans);
   padding: 20px;
   margin: 0;
 }
