--- a/app/globals.css
+++ b/app/globals.css
@@ -1,32 +1,23 @@
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-background: #ffffff;
+  --color-foreground: #171717;
+  --color-brand-700: #0e3768;
+  --color-brand-600: #114c91;
+  --color-brand-500: #1666c2;
+  --color-brand-400: #1c7ff2;
+  --color-brand-100: #e8f2fc;
+  --color-brand-50: #000000;
+  --font-sans: var(--font-dm-sans);
+  --font-mono: var(--font-azeret-mono);
   --font-dm-sans: var(--font-dm-sans);
   --font-azeret-mono: var(--font-azeret-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-background);
+  color: var(--color-foreground);
   font-family: var(--font-dm-sans);
   padding: 20px;
   margin: 0;
